--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!---------------render normal ----------------------->
-    <link rel="stylesheet" href="../css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!---------------font awesome ------------------------>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!---------------main style file --------------------->
 
     <title>NFT MarketPlace</title>
