--- a/index.html
+++ b/index.html
@@ -14,13 +14,48 @@
 </head>
 <body>
     <header>
-        <a href="#"><i class="fa fa-place-of-worship fas"></i> NFT MarketPlace</a>
-    <ul class="links">
-        <li><a href="#">MarketPlace</a></li>
-        <li><a href="#">Ranking</a></li>
-        <li><a href="#">connect a wallet</a></li>
-        <li><a href="#">Sign Up</a></li>
-    </ul>
+        <a href="#"><i class="fa fa-place-of-worship fas"></i> <p>NFT MarketPlace</p></a>
+    <div class="links-bar">
+            <i class="fa-navicon fa fas"></i>
+        <ul class="links">
+            <li><a href="#">MarketPlace</a></li>
+            <li><a href="#">Ranking</a></li>
+            <li><a href="#">connect a wallet</a></li>
+            <li><a href="#">Sign Up</a></li>
+        </ul>
+    </div>
     </header>
+    <div class="landing">
+        <div class="container">
+            <div class="article">
+                <h1>Discover Digital Art & Collect NFTs</h1>
+                <p>NFT Marketplace UI created with Ahmed , Buy And Sell Art From More Than 20k NFT Artists</p>
+                <a href="#"><i class="fa fa-rocket"></i>Get Started</a>
+                <div class="info">
+                    <div>
+                        <h2>240k+</h2>
+                        <p>Total Sale</p>
+                    </div>
+                    <div>
+                        <h2>100k+</h2>
+                        <p>Total Sale</p>
+                    </div>                    <div>
+                        <h2>240k+</h2>
+                        <p>Artists</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="images/Image Placeholder.png" alt="image">
+                <div class="info">
+                    <h2>Space Walking</h2>
+                    <div class="uesr">
+                        <img src="images/Avatar Placeholder4.png" >
+                        <p>Animakid</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
